--- a/nginx.conf
+++ b/nginx.conf
@@ -33,7 +33,7 @@ http {
 
     server {
         listen  80;
-        server_name  test-express-a5t6.onrender.com
+        server_name  test-express-a5t6.onrender.com;
 
 
         #charset koi8-r;
